// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`center\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH ulHHY"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH cWyunb"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH LfxJj"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH dPobDt"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`giant\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH fYxOFs"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`huge\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH gTFTIL"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH LfxJj"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH LfxJj"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH giqvQX"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH iyJZlp"
  disabled={false}
  name="text"
/>
`;
